tests/lean/217.lean.expected.out
217.lean:5:30: error: don't know how to synthesize placeholder
context:
a✝ : Environment
⊢ CoreM Unit
217.lean:5:28: error: don't know how to synthesize placeholder
context:
a✝ : Environment
⊢ CoreM Unit → Name → ConstantInfo → CoreM Unit
